상단 메뉴 수정, 노래 샘플 추가

--- a/client/main.html
+++ b/client/main.html
@@ -5,10 +5,10 @@
 <template name="layout" style="margin: 0">
     <div class="top">
         <ul class="top_ul">
-            <li class="top_li">{{>openMenu}}</li>
-            <li class="top_li"><a href="{{pathFor 'home'}}">HOME</a></li>
+            <li class="top_li" style="width: 250px;"><a href="#">WebPlayer</a></li>
+            <li class="top_li"><a href="{{pathFor 'list'}}">All LIST</a></li>
             <li class="top_li"><a href="{{pathFor 'search'}}">SEARCH</a></li>
-            <li class="top_li"><a href="{{pathFor 'list'}}">LIST</a></li>
+            <li class="top_li"><a href="{{pathFor 'home'}}">PLAY</a></li>
         </ul>
     </div>
     <div id="sideMenu">
