--- a/client/player/player.html
+++ b/client/player/player.html
@@ -1,6 +1,6 @@
 <template name="player">
-    <audio id="audio" width="300" height="30" controls="controls">
-        <source src="http://www.w3schools.com/html/horse.mp3" type="audio/mpeg">
+    <audio id="audio" controls="controls">
+        <source src="백아연-01-쏘쏘-128k.mp3.mp3" type="audio/mp3">
     </audio>
     <button id="play">Play</button>
     <button id="pause">Pause</button>
