--- a/client/player/player.html
+++ b/client/player/player.html
@@ -1,6 +1,6 @@
 <template name="player">
     <audio id="audio" controls="controls">
-        <source src="백아연-01-쏘쏘-128k.mp3.mp3" type="audio/mp3">
+        <source src="크루셜스타(Crucial%20Star)-01-Flat%20Shoes%20(Feat.%20Lovey)-128k.mp3" type="audio/mp3">
     </audio>
     <button id="play">Play</button>
     <button id="pause">Pause</button>
